# wdlrunner

./: .gitignore  CMakeLists.txt  README.md  test.wdl  test2.wdl
case-study-examples/: README.md
include/: boolean_network.h  lexer.h  parser.h  soto.h  string_utils.h  token.h  wdlparser.h
src/: boolean_network.cpp  lexer.cpp  main.cpp  parser.cpp
